Build on JDK11 by default (#7)